--- a/src/view/GraphType.fxml
+++ b/src/view/GraphType.fxml
@@ -7,8 +7,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="648.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2">
+<AnchorPane prefHeight="648.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphType">
   <children>
-    <PieChart id="PieChart" layoutX="200.0" layoutY="110.0" />
+    <PieChart id="PieChart" fx:id="typePchart" layoutX="200.0" layoutY="215.0" />
+    <Label layoutX="357.0" layoutY="162.0" text="Types d'équipements">
+      <font>
+        <Font name="System Bold" size="17.0" />
+      </font>
+    </Label>
   </children>
 </AnchorPane>
