--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -11,17 +11,16 @@
     <Button layoutX="362.0" layoutY="25.0" mnemonicParsing="false" onAction="#displayAddEquipment" prefHeight="31.0" prefWidth="197.0" text="Ajouter des équipements" />
     <TableView fx:id="tableViewEquipement" layoutX="29.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="492.0" prefWidth="842.0">
       <columns>
-        <TableColumn fx:id="columnCalife" maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Nom Calife" />
-        <TableColumn fx:id="columnType" maxWidth="5000.0" minWidth="10.0" prefWidth="185.0" text="Type" />
-        <TableColumn fx:id="columnPrix" prefWidth="75.0" text="Valeur (€)" />
-        <TableColumn fx:id="columnDateGarantie" maxWidth="5000.0" minWidth="10.0" prefWidth="128.0" text="Date de Grantie" />
-        <TableColumn fx:id="columnAgent" maxWidth="5000.0" minWidth="10.0" prefWidth="107.0" text="N° CP Agent" />
-        <TableColumn fx:id="columnModifier" maxWidth="5000.0" minWidth="10.0" prefWidth="83.0" text="Info" />
-        <TableColumn fx:id="columnSupprimer" maxWidth="5000.0" minWidth="10.0" prefWidth="77.0" text="Supprimer" />
+        <TableColumn fx:id="columnCalife" maxWidth="5000.0" minWidth="10.0" prefWidth="164.0" text="Nom Calife" />
+        <TableColumn fx:id="columnType" maxWidth="5000.0" minWidth="10.0" prefWidth="114.0" text="Type" />
+        <TableColumn fx:id="columnPrix" prefWidth="132.0" text="Valeur (€)" />
+        <TableColumn fx:id="columnAgent" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="N° CP Agent" />
+        <TableColumn fx:id="columnDateGarantie" maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Date fin garantie" />
+            <TableColumn fx:id="columnModifier" prefWidth="92.0" text="Modifier" />
+        <TableColumn fx:id="columnSupprimer" maxWidth="5000.0" minWidth="10.0" prefWidth="98.0" text="Supprimer" />
       </columns>
     </TableView>
-    <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefWidth="696.0" />
-    <Button fx:id="searchButton" layoutX="738.0" layoutY="134.0" mnemonicParsing="false" onAction="#searchEquipement" prefHeight="21.999900000002526" prefWidth="133.0" text="Rechercher" />
+    <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Tapez votre recherche selon un critère ci-dessous." />
     <Separator layoutY="75.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label layoutX="277.0" layoutY="91.0" text="Modifier/Supprimer des équipements">
       <font>
@@ -35,7 +34,6 @@
       </items>
     </MenuButton>
     <Button layoutX="613.0" layoutY="25.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" textAlignment="CENTER" />
-    <Button fx:id="buttonNext" layoutX="398.0" layoutY="699.0" mnemonicParsing="false" onAction="#viewMore" text="Page suivante" textAlignment="CENTER" />
     <CheckBox fx:id="checkBoxExportTable" layoutX="747.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
   </children>
 </AnchorPane>
