--- a/src/view/GraphRenewal.fxml
+++ b/src/view/GraphRenewal.fxml
@@ -8,29 +8,23 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="648.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphRenewal">
+<AnchorPane prefHeight="723.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphRenewal">
   <children>
-    <Label layoutX="669.0" layoutY="184.0" text="Année de début:" />
-    <Label layoutX="669.0" layoutY="255.0" text="Année de fin:" />
-    <ComboBox layoutX="789.0" layoutY="182.0">
+    <Label layoutX="659.0" layoutY="373.0" text="Année de début:" />
+    <Label layoutX="659.0" layoutY="433.0" text="Année de fin:" />
+    <ComboBox layoutX="779.0" layoutY="371.0">
       <items>
-        <FXCollections fx:factory="observableArrayList">
-          <String fx:value="Item 1" />
-          <String fx:value="Item 2" />
-          <String fx:value="Item 3" />
+        <FXCollections fx:id="sYear" fx:factory="observableArrayList">
         </FXCollections>
       </items>
     </ComboBox>
-    <ComboBox layoutX="789.0" layoutY="252.0">
+    <ComboBox layoutX="779.0" layoutY="430.0">
       <items>
-        <FXCollections fx:factory="observableArrayList">
-          <String fx:value="Item 1" />
-          <String fx:value="Item 2" />
-          <String fx:value="Item 3" />
+        <FXCollections fx:id="eYear" fx:factory="observableArrayList">
         </FXCollections>
       </items>
     </ComboBox>
-    <StackedBarChart layoutX="59.0" layoutY="145.0" prefHeight="451.0" prefWidth="577.0">
+    <StackedBarChart fx:id="renewalSBchart" layoutX="32.0" layoutY="157.0" prefHeight="525.0" prefWidth="604.0">
       <xAxis>
         <CategoryAxis side="BOTTOM" />
       </xAxis>
@@ -38,5 +32,12 @@
         <NumberAxis side="LEFT" />
       </yAxis>
     </StackedBarChart>
+    <Button fx:id="bPrice" layoutX="711.0" layoutY="186.0" mnemonicParsing="false" onAction="#displayByPrice" prefWidth="93.0" text="Prix" />
+    <Button fx:id="bQuantity" layoutX="711.0" layoutY="232.0" mnemonicParsing="false" onAction="#displayByQuantity" prefWidth="93.0" text="Quantité" />
+    <Label layoutX="338.0" layoutY="112.0" text="Renouvellement à prévoir">
+      <font>
+        <Font name="System Bold" size="17.0" />
+      </font>
+    </Label>
   </children>
 </AnchorPane>
