--- a/src/view/AjoutEquipement.fxml
+++ b/src/view/AjoutEquipement.fxml
@@ -7,14 +7,14 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="820.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.AjoutEquipement">
+<AnchorPane fx:id="bodyPanel" prefHeight="820.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.AjoutEquipement">
   <children>
     <Label layoutX="373.0" layoutY="85.0" text="Nouvel équipement">
       <font>
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <Label layoutX="519.0" layoutY="307.0" text="Valeur (€)" />
+    <Label layoutX="519.0" layoutY="307.0" text="Valeur (€)*" />
     <Button fx:id="btnEditDelete" layoutX="341.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des équipements" />
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
     <ComboBox fx:id="typeEquipement" layoutX="427.0" layoutY="128.0" prefHeight="31.0" prefWidth="200.0">
@@ -30,9 +30,9 @@
     <DatePicker fx:id="dateGarantie" layoutX="637.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
     <TextArea fx:id="info" layoutX="637.0" layoutY="491.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
     <Button fx:id="btnEnregistrer" layoutX="402.0" layoutY="700.0" mnemonicParsing="false" onAction="#enregistrerEquipement" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
-    <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement" />
+    <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement*" />
     <Label layoutX="73.0" layoutY="382.0" text="N° CP Agent" />
-    <Label layoutX="78.0" layoutY="201.0" text="Nom Calife" />
+    <Label layoutX="78.0" layoutY="201.0" text="Nom Calife*" />
     <Label layoutX="87.0" layoutY="252.0" text="Marque" />
     <Label layoutX="88.0" layoutY="307.0" text="Modèle" />
     <Label layoutX="495.0" layoutY="252.0" text="Date fin garantie" />
@@ -45,7 +45,7 @@
     <Label layoutX="86.0" layoutY="521.0" text="Logiciels" />
     <Button layoutX="395.0" layoutY="516.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
     <Button layoutX="396.0" layoutY="550.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="Nouveau" />
-    <Button layoutX="637.0" layoutY="128.0" mnemonicParsing="false" onAction="#addTypeEquipement" text="Nouveau" />
+    <Button layoutX="637.0" layoutY="128.0" mnemonicParsing="false" onAction="#addTypeEquipement" text="+" />
     <Label layoutX="420.0" layoutY="381.0" text="et / ou">
       <font>
         <Font name="System Bold" size="15.0" />
@@ -60,5 +60,6 @@
     <Separator layoutY="345.0" prefHeight="3.0" prefWidth="900.0" />
     <Separator layoutX="4.0" layoutY="462.0" prefWidth="900.0" />
     <Button layoutX="849.0" layoutY="379.0" mnemonicParsing="false" onAction="#addPole" text="+" />
+      <Label layoutX="71.0" layoutY="665.0" text="*: obligatoire" />
   </children>
 </AnchorPane>
