--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -14,9 +14,9 @@
         <TableColumn fx:id="columnCalife" maxWidth="5000.0" minWidth="10.0" prefWidth="164.0" text="Nom Calife" />
         <TableColumn fx:id="columnType" maxWidth="5000.0" minWidth="10.0" prefWidth="114.0" text="Type" />
         <TableColumn fx:id="columnPrix" prefWidth="132.0" text="Valeur (€)" />
+        <TableColumn fx:id="columnPole" maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Pole" />
         <TableColumn fx:id="columnAgent" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="N° CP Agent" />
-        <TableColumn fx:id="columnDateGarantie" maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Date fin garantie" />
-            <TableColumn fx:id="columnModifier" prefWidth="92.0" text="Modifier" />
+            <TableColumn fx:id="columnModifier" prefWidth="92.0" text="Ouvrir" />
         <TableColumn fx:id="columnSupprimer" maxWidth="5000.0" minWidth="10.0" prefWidth="98.0" text="Supprimer" />
       </columns>
     </TableView>
