--- a/src/view/AjoutAgent.fxml
+++ b/src/view/AjoutAgent.fxml
@@ -16,20 +16,22 @@
     </Label>
     <Separator layoutX="0.0" layoutY="63.0" prefWidth="900.0" />
     <Button id="btnEditDelete" layoutX="349.0" layoutY="22.0" mnemonicParsing="false" onAction="#displayEditDelete" text="Modifier/Supprimer des agents" />
-    <TextField id="name" fx:id="nom" layoutX="351.0" layoutY="220.0" prefWidth="200.0" />
-    <TextField fx:id="prenom" layoutX="351.0" layoutY="271.0" prefWidth="200.0" />
-    <Label layoutX="263.0" layoutY="223.0" text="Nom" />
-    <Label layoutX="254.0" layoutY="274.0" text="Prénom" />
-    <Label layoutX="235.0" layoutY="380.0" text="Pôle / Service" />
-    <Label layoutX="260.0" layoutY="433.0" text="N° CP" />
+    <TextField id="name" fx:id="nom" layoutX="350.0" layoutY="272.0" prefWidth="200.0" />
+    <TextField fx:id="prenom" layoutX="350.0" layoutY="323.0" prefWidth="200.0" />
+    <Label layoutX="262.0" layoutY="275.0" text="Nom*" />
+    <Label layoutX="253.0" layoutY="326.0" text="Prénom*" />
+    <Label layoutX="234.0" layoutY="432.0" text="Pôle / Service*" />
+    <Label layoutX="260.0" layoutY="227.0" text="N° CP*" />
     <Button layoutX="422.0" layoutY="547.0" mnemonicParsing="false" onAction="#enregistrerAgent" text="Ajouter" />
-    <ComboBox fx:id="pole" layoutX="351.0" layoutY="378.0" prefWidth="200.0">
+    <ComboBox fx:id="poles" layoutX="350.0" layoutY="430.0" prefWidth="200.0">
       <items>
         <FXCollections fx:factory="observableArrayList" />
       </items>
     </ComboBox>
-    <TextField fx:id="tel" layoutX="351.0" layoutY="325.0" prefWidth="200.0" />
-    <TextField fx:id="numCP" layoutX="351.0" layoutY="430.0" prefWidth="200.0" />
-    <Label layoutX="245.0" layoutY="328.0" prefWidth="63.0" text="Téléphone" />
+    <TextField fx:id="tel" layoutX="350.0" layoutY="377.0" prefWidth="200.0" />
+    <TextField fx:id="numCP" layoutX="349.0" layoutY="222.0" prefWidth="200.0" />
+    <Label layoutX="232.0" layoutY="380.0" prefHeight="21.0" prefWidth="75.0" text="Téléphone" />
+      <Button layoutX="557.0" layoutY="430.0" mnemonicParsing="false" onAction="#addPole" text="+" />
+      <Label layoutX="88.0" layoutY="515.0" text="*: obligatoire" />
   </children>
 </AnchorPane>
