--- a/src/view/GestionAgent.fxml
+++ b/src/view/GestionAgent.fxml
@@ -15,7 +15,7 @@
     </Label>
     <Separator layoutY="75.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Button id="btnEditDelete" layoutX="362.0" layoutY="25.0" mnemonicParsing="false" onAction="#displayAddAgent" prefHeight="21.0" prefWidth="181.0" text="Ajouter des agents" />
-    <TableView fx:id="searchTab" layoutY="172.0" prefHeight="492.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
+    <TableView fx:id="tableViewAgent" layoutY="172.0" prefHeight="492.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
         <TableColumn fx:id="nomCol" maxWidth="5000.0" minWidth="10.0" prefWidth="192.0" text="Nom" />
         <TableColumn fx:id="prenomCol" maxWidth="5000.0" minWidth="10.0" prefWidth="150.0" text="Prénom" />
@@ -23,7 +23,7 @@
         <TableColumn fx:id="numCPCol" maxWidth="5000.0" minWidth="10.0" prefWidth="112.0" text="N° de CP" />
         <TableColumn fx:id="telCol" maxWidth="5000.0" minWidth="10.0" prefWidth="104.0" text="Téléphone" />
         <TableColumn fx:id="columnModifier" maxWidth="5000.0" minWidth="0.0" prefWidth="74.0" text="Modifier" />
-        <TableColumn fx:id="columnSupprimer" prefWidth="75.0" text="Supprimer" />
+        <TableColumn fx:id="columnSupprimer" prefWidth="85.0" text="Supprimer" />
       </columns>
     </TableView>
     <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Tapez votre recherche selon un critère ci-dessous." />
@@ -34,7 +34,6 @@
       </items>
     </MenuButton>
     <Button layoutX="613.0" layoutY="25.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" />
-    <Button fx:id="buttonNext" layoutX="398.0" layoutY="699.0" mnemonicParsing="false" onAction="#viewMore" text="Page suivante" textAlignment="CENTER" />
     <CheckBox fx:id="checkBoxExportTable" layoutX="747.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
   </children>
 </AnchorPane>
