--- a/src/view/InformationEquipementPopup.fxml
+++ b/src/view/InformationEquipementPopup.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="400.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.InformationEquipement">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.InformationEquipement">
   <children>
     <ImageView fitHeight="66.5" fitWidth="88.66666876751444" layoutX="26.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true" />
     <Button fx:id="ok" layoutX="53.0" layoutY="428.0" mnemonicParsing="false" onAction="#validate" prefWidth="104.0" text="OK" />
@@ -23,21 +23,21 @@
     <Label layoutX="53.0" layoutY="105.0" text="Nom Calife:" />
     <Label layoutX="42.0" layoutY="238.0" text="Logiciels installés:" />
     <ListView fx:id="logiciels" layoutX="53.0" layoutY="265.0" prefHeight="143.0" prefWidth="299.0" />
-    <Label fx:id="type" layoutX="93.0" layoutY="57.0" prefWidth="259.0" text="-">
+    <Label fx:id="type" layoutX="93.0" layoutY="57.0" prefWidth="259.0">
       <font>
         <Font name="System Bold" size="13.0" fx:id="x1" />
       </font>
     </Label>
-    <Label fx:id="marque" font="$x1" layoutX="106.0" layoutY="73.0" prefWidth="246.0" text="-" />
-    <Label fx:id="modele" font="$x1" layoutX="106.0" layoutY="89.0" prefWidth="246.0" text="-" />
-    <Label fx:id="calife" font="$x1" layoutX="127.0" layoutY="105.0" prefWidth="225.0" text="-" />
+    <Label fx:id="marque" font="$x1" layoutX="106.0" layoutY="73.0" prefWidth="246.0" />
+    <Label fx:id="modele" font="$x1" layoutX="106.0" layoutY="89.0" prefWidth="246.0" />
+    <Label fx:id="calife" font="$x1" layoutX="127.0" layoutY="105.0" prefWidth="225.0" />
     <Label fx:id="nom" font="$x1" layoutX="87.0" layoutY="176.0" prefWidth="265.0" text="-" />
     <Label fx:id="prenom" font="$x1" layoutX="106.0" layoutY="192.0" prefWidth="246.00009999999747" text="-" />
     <Label fx:id="cp" font="$x1" layoutX="93.0" layoutY="208.0" prefWidth="258.9999000000025" text="-" />
-    <Label layoutX="224.0" layoutY="40.0" text="Autres Informations:" />
-    <TextArea fx:id="info" editable="false" layoutX="223.0" layoutY="63.0" prefHeight="156.0" prefWidth="130.0" wrapText="true" />
+    <Label layoutX="376.0" layoutY="42.0" text="Autres Informations:" />
+    <TextArea fx:id="info" editable="false" layoutX="375.0" layoutY="65.0" prefHeight="156.0" prefWidth="130.0" wrapText="true" />
     <Label layoutX="53.0" layoutY="122.0" text="Date livraison:" />
-    <Label id="calife" fx:id="dateLivraison" font="$x1" layoutX="144.0" layoutY="122.0" prefWidth="225.0" text="-" />
+    <Label id="calife" fx:id="dateLivraison" font="$x1" layoutX="144.0" layoutY="122.0" prefWidth="225.0" />
     <Button id="ok" fx:id="edit" layoutX="248.0" layoutY="428.0" mnemonicParsing="false" onAction="#editEquipement" prefWidth="104.0" text="Modifier" />
   </children>
 </AnchorPane>
