--- a/src/view/EditEquipement.fxml
+++ b/src/view/EditEquipement.fxml
@@ -7,41 +7,57 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="820.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.EditEquipement">
+<AnchorPane fx:id="bodyPanel" prefHeight="820.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.EditEquipement">
   <children>
-    <Label layoutX="354.0" layoutY="48.0" text="Modifier l'équipement">
+    <Label layoutX="375.0" layoutY="52.0" text="Modification équipement">
       <font>
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
-    <Label layoutX="87.0" layoutY="317.0" text="Valeur (€)" />
-    <ComboBox fx:id="type" layoutX="427.0" layoutY="128.0" prefHeight="31.0" prefWidth="200.0">
+    <Label layoutX="519.0" layoutY="307.0" text="Valeur (€)*" />
+    <ComboBox fx:id="typeEquipement" layoutX="427.0" layoutY="128.0" prefHeight="31.0" prefWidth="200.0">
       <items>
         <FXCollections fx:factory="observableArrayList" />
       </items>
     </ComboBox>
     <TextField fx:id="calife" layoutX="188.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
     <TextField fx:id="marque" layoutX="188.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
-    <TextField fx:id="prix" layoutX="188.0" layoutY="312.0" prefHeight="31.0" prefWidth="200.0" />
-    <TextField fx:id="modele" layoutX="188.0" layoutY="367.0" prefHeight="31.0" prefWidth="200.0" />
-    <ComboBox fx:id="numCPAgent" layoutX="637.0" layoutY="198.0" prefWidth="200.0">
+    <TextField fx:id="prix" layoutX="637.0" layoutY="302.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextField fx:id="modele" layoutX="187.0" layoutY="302.0" prefHeight="31.0" prefWidth="200.0" />
+    <DatePicker fx:id="dateLivraison" layoutX="637.0" layoutY="193.0" prefHeight="31.0" prefWidth="200.0" />
+    <DatePicker fx:id="dateGarantie" layoutX="637.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
+    <TextArea fx:id="info" layoutX="637.0" layoutY="491.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
+    <Button fx:id="editButton" layoutX="402.0" layoutY="700.0" mnemonicParsing="false" onAction="#modifierEquipement" prefHeight="31.0" prefWidth="104.0" text="Modifier" />
+    <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement*" />
+    <Label layoutX="73.0" layoutY="382.0" text="N° CP Agent" />
+    <Label layoutX="78.0" layoutY="201.0" text="Nom Calife*" />
+    <Label layoutX="87.0" layoutY="252.0" text="Marque" />
+    <Label layoutX="88.0" layoutY="307.0" text="Modèle" />
+    <Label layoutX="495.0" layoutY="252.0" text="Date fin garantie" />
+    <Label layoutX="672.0" layoutY="472.0" text="Autres informations" />
+    <Label layoutX="506.0" layoutY="201.0" text="Date livraison" />
+    <TextField fx:id="numCPAgent" editable="false" layoutX="188.0" layoutY="373.0" prefHeight="31.0" prefWidth="200.0" />
+    <Button layoutX="308.0" layoutY="410.0" mnemonicParsing="false" onAction="#ajoutAgent" text="Nouveau" />
+    <Button layoutX="188.0" layoutY="410.0" mnemonicParsing="false" onAction="#selectAgent" text="Selection" />
+    <ListView fx:id="lstLogiciel" layoutX="188.0" layoutY="511.0" prefHeight="108.0" prefWidth="200.0" />
+    <Label layoutX="86.0" layoutY="521.0" text="Logiciels" />
+    <Button layoutX="395.0" layoutY="516.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
+    <Button layoutX="396.0" layoutY="550.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="Nouveau" />
+    <Button layoutX="637.0" layoutY="128.0" mnemonicParsing="false" onAction="#addTypeEquipement" text="+" />
+    <Label layoutX="420.0" layoutY="381.0" text="et / ou">
+      <font>
+        <Font name="System Bold" size="15.0" />
+      </font>
+    </Label>
+    <ComboBox fx:id="poles" layoutX="637.0" layoutY="379.0" prefWidth="200.0">
       <items>
         <FXCollections fx:factory="observableArrayList" />
       </items>
     </ComboBox>
-    <DatePicker fx:id="dateGarantie" layoutX="637.0" layoutY="247.0" prefHeight="31.0" prefWidth="200.0" />
-    <TextArea fx:id="info" layoutX="637.0" layoutY="312.0" prefHeight="195.0" prefWidth="200.0" wrapText="true" />
-    <Button fx:id="btnEnregistrer" layoutX="402.0" layoutY="700.0" mnemonicParsing="false" onAction="#validate" prefHeight="31.0" prefWidth="104.0" text="Enregistrer" />
-    <Label layoutX="256.0" layoutY="133.0" text="Type d'équipement" />
-    <Label layoutX="510.0" layoutY="201.0" text="N° CP Agent" />
-    <Label layoutX="78.0" layoutY="201.0" text="Nom Calife" />
-    <Label layoutX="87.0" layoutY="252.0" text="Marque" />
-    <Label layoutX="90.0" layoutY="372.0" text="Modèle" />
-    <Label layoutX="495.0" layoutY="252.0" text="Date fin garantie" />
-    <Label layoutX="486.0" layoutY="317.0" text="Autres informations" />
-    <ListView fx:id="lstLogiciel" layoutX="188.0" layoutY="435.0" prefHeight="108.0" prefWidth="200.0" />
-    <Label layoutX="67.0" layoutY="445.0" text="Logiciels" />
-    <Button layoutX="398.0" layoutY="440.0" mnemonicParsing="false" onAction="#selectLogiciels" text="Selection" />
-    <Button layoutX="399.0" layoutY="474.0" mnemonicParsing="false" onAction="#ajoutLogiciel" text="Nouveau" />
+    <Label layoutX="505.0" layoutY="382.0" text="Pôle / Service" />
+    <Separator layoutY="345.0" prefHeight="3.0" prefWidth="900.0" />
+    <Separator layoutX="4.0" layoutY="462.0" prefWidth="900.0" />
+    <Button layoutX="849.0" layoutY="379.0" mnemonicParsing="false" onAction="#addPole" text="+" />
+      <Label layoutX="71.0" layoutY="665.0" text="*: obligatoire" />
   </children>
 </AnchorPane>
