--- a/src/view/EditAgent.fxml
+++ b/src/view/EditAgent.fxml
@@ -23,6 +23,6 @@
     <TextField fx:id="tel" layoutX="182.0" layoutY="191.0" prefWidth="200.0" />
     <TextField fx:id="numCP" layoutX="182.0" layoutY="296.0" prefWidth="200.0" />
     <Label layoutX="76.0" layoutY="194.0" prefWidth="63.0" text="Téléphone" />
-    <Button fx:id="btnEnregistrer" layoutX="198.0" layoutY="385.0" mnemonicParsing="false" onAction="#saveEditAgent" text="Ajouter" />
+    <Button fx:id="btnEnregistrer" layoutX="198.0" layoutY="385.0" mnemonicParsing="false" onAction="#saveEditAgent" text="Modifier" />
   </children>
 </AnchorPane>
