--- a/src/view/EditLogiciel.fxml
+++ b/src/view/EditLogiciel.fxml
@@ -14,7 +14,7 @@
     <Label layoutX="89.0" layoutY="71.0" text="Libelle" />
     <Label layoutX="49.0" layoutY="122.0" text="Numéro de la licence" />
     <Label layoutX="54.0" layoutY="176.0" text="Prix de la licence (€)" />
-    <Button fx:id="btnEnregistrer" layoutX="199.0" layoutY="315.0" mnemonicParsing="false" onAction="#saveLogiciel" text="Ajouter" />
+    <Button fx:id="btnEnregistrer" layoutX="199.0" layoutY="315.0" mnemonicParsing="false" onAction="#saveLogiciel" text="Modifier" />
     <DatePicker fx:id="dateFinValidite" layoutX="219.0" layoutY="234.0" prefHeight="31.0" prefWidth="200.0" />
     <Label layoutX="66.0" layoutY="234.0" text="Fin de validité" />
   </children>
