--- a/src/view/InformationEquipementPopup.fxml
+++ b/src/view/InformationEquipementPopup.fxml
@@ -8,7 +8,7 @@
 <?import javafx.scene.paint.*?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="542.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.InformationEquipement">
+<AnchorPane id="AnchorPane" fx:id="root" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="475.0" prefWidth="542.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.InformationEquipement">
   <children>
     <ImageView fitHeight="66.5" fitWidth="88.66666876751444" layoutX="26.0" layoutY="65.0" pickOnBounds="true" preserveRatio="true" />
     <Button fx:id="ok" layoutX="53.0" layoutY="428.0" mnemonicParsing="false" onAction="#validate" prefWidth="104.0" text="OK" />
@@ -38,6 +38,7 @@
     <TextArea fx:id="info" editable="false" layoutX="375.0" layoutY="65.0" prefHeight="156.0" prefWidth="130.0" wrapText="true" />
     <Label layoutX="53.0" layoutY="122.0" text="Date livraison:" />
     <Label id="calife" fx:id="dateLivraison" font="$x1" layoutX="144.0" layoutY="122.0" prefWidth="225.0" />
-    <Button id="ok" fx:id="edit" layoutX="248.0" layoutY="428.0" mnemonicParsing="false" onAction="#editEquipement" prefWidth="104.0" text="Modifier" />
+    <Button id="ok" fx:id="edit" layoutX="219.0" layoutY="428.0" mnemonicParsing="false" onAction="#editEquipement" prefWidth="104.0" text="Modifier" />
+    <Button layoutX="384.0" layoutY="429.0" mnemonicParsing="false"  onAction="#exportEquipement" prefWidth="104.0" text="Exporter" />
   </children>
 </AnchorPane>
