--- a/src/view/StatEtPrevision.fxml
+++ b/src/view/StatEtPrevision.fxml
@@ -9,7 +9,10 @@
   <children>
     <AnchorPane fx:id="graphPanel" layoutX="0.0" layoutY="102.0" prefHeight="648.0" prefWidth="900.0" />
     <Separator layoutX="0.0" layoutY="98.0" prefWidth="900.0" />
-    <Button fx:id="typeEquipement" layoutX="29.0" layoutY="38.0" onAction="#typeGraph" mnemonicParsing="false" text="Type d'équipements" />
-    <Button fx:id="renewal" layoutX="194.0" layoutY="38.0" onAction="#renewalGraph" mnemonicParsing="false" text="Renouvellement à venir" />
+    <Button fx:id="typeEquipement" layoutX="14.0" layoutY="38.0" mnemonicParsing="false" onAction="#typeGraph" text="Type d'équipements" />
+    <Button fx:id="renewal" layoutX="543.0" layoutY="38.0" mnemonicParsing="false" onAction="#renewalGraph" text="Renouvellement (par types)" />
+    <Button id="renewal" layoutX="353.0" layoutY="38.0" mnemonicParsing="false" onAction="#renewalGraph" text="Nombre d'équipements/Poles" />
+    <Button id="typeEquipement" layoutX="159.0" layoutY="38.0" mnemonicParsing="false" onAction="#typeGraph" text="Nombre d'équipements/Types" />
+    <Button id="renewal" layoutX="720.0" layoutY="38.0" mnemonicParsing="false" onAction="#renewalGraph" text="Renouvellement (par pôles)" />
   </children>
 </AnchorPane>
