--- a/src/view/GraphType.fxml
+++ b/src/view/GraphType.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane prefHeight="648.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphType">
+<AnchorPane fx:id="bodyPanel" prefHeight="648.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GraphType">
   <children>
     <PieChart id="PieChart" fx:id="typePchart" layoutX="200.0" layoutY="215.0" />
     <Label layoutX="304.0" layoutY="162.0" text="Types d'équipements enregistrés">
@@ -15,5 +15,6 @@
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
+    <Button layoutX="408.0" layoutY="615.0" mnemonicParsing="false" onAction="#exportGraph" text="Exporter" />
   </children>
 </AnchorPane>
