--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -13,11 +13,11 @@
       <columns>
         <TableColumn fx:id="columnCalife" maxWidth="5000.0" minWidth="10.0" prefWidth="164.0" text="Nom Calife" />
         <TableColumn fx:id="columnType" maxWidth="5000.0" minWidth="10.0" prefWidth="114.0" text="Type" />
-        <TableColumn fx:id="columnPrix" prefWidth="132.0" text="Valeur (€)" />
         <TableColumn fx:id="columnPole" maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Pole" />
         <TableColumn fx:id="columnAgent" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="N° CP Agent" />
-            <TableColumn fx:id="columnModifier" prefWidth="92.0" text="Ouvrir" />
-        <TableColumn fx:id="columnSupprimer" maxWidth="5000.0" minWidth="10.0" prefWidth="98.0" text="Supprimer" />
+            <TableColumn fx:id="columnOpen" prefWidth="92.0" text="Ouvrir" />
+            <TableColumn fx:id="columnEdit" prefWidth="122.0" text="Modifier" />
+        <TableColumn fx:id="columnDelete" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="Supprimer" />
       </columns>
     </TableView>
     <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Tapez votre recherche selon un critère ci-dessous." />
@@ -35,5 +35,6 @@
     </MenuButton>
     <Button layoutX="613.0" layoutY="25.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" textAlignment="CENTER" />
     <CheckBox fx:id="checkBoxExportTable" layoutX="747.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
+      <Button fx:id="fieldRefresh" layoutX="29.0" layoutY="89.0" mnemonicParsing="false" onAction="#refreshTable" text="Actualiser" />
   </children>
 </AnchorPane>
