--- a/src/view/GestionAgent.fxml
+++ b/src/view/GestionAgent.fxml
@@ -6,7 +6,7 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="750.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GestionAgent">
+<AnchorPane fx:id="bodyPanel" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="750.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionAgent">
   <children>
     <Label layoutX="313.0" layoutY="91.0" text="Modifier/Supprimer des agents">
       <font>
@@ -15,18 +15,18 @@
     </Label>
     <Separator layoutY="75.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Button id="btnEditDelete" layoutX="362.0" layoutY="25.0" mnemonicParsing="false" onAction="#displayAddAgent" prefHeight="21.0" prefWidth="181.0" text="Ajouter des agents" />
-    <TableView fx:id="tableViewAgent" layoutY="172.0" prefHeight="492.0" prefWidth="842.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
+    <TableView fx:id="tableViewAgent" prefHeight="492.0" prefWidth="842.0" AnchorPane.bottomAnchor="79.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
-        <TableColumn fx:id="nomCol" maxWidth="5000.0" minWidth="10.0" prefWidth="192.0" text="Nom" />
-        <TableColumn fx:id="prenomCol" maxWidth="5000.0" minWidth="10.0" prefWidth="150.0" text="Prénom" />
-        <TableColumn fx:id="poleCol" maxWidth="5000.0" minWidth="10.0" prefWidth="124.0" text="Pôle/Service" />
-        <TableColumn fx:id="numCPCol" maxWidth="5000.0" minWidth="10.0" prefWidth="112.0" text="N° de CP" />
-        <TableColumn fx:id="telCol" maxWidth="5000.0" minWidth="10.0" prefWidth="104.0" text="Téléphone" />
-        <TableColumn fx:id="columnModifier" maxWidth="5000.0" minWidth="0.0" prefWidth="74.0" text="Modifier" />
-        <TableColumn fx:id="columnSupprimer" prefWidth="85.0" text="Supprimer" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="192.0" text="Nom" fx:id="nomCol" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="150.0" text="Prénom" fx:id="prenomCol" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="124.0" text="Pôle/Service" fx:id="poleCol" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="112.0" text="N° de CP" fx:id="numCPCol" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="104.0" text="Téléphone" fx:id="telCol" />
+        <TableColumn maxWidth="5000.0" minWidth="0.0" prefWidth="74.0" text="Modifier" fx:id="columnModifier" />
+        <TableColumn prefWidth="85.0" text="Supprimer" fx:id="columnSupprimer" />
       </columns>
     </TableView>
-    <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Tapez votre recherche selon un critère ci-dessous." />
+    <TextField fx:id="searchBar" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Tapez votre recherche selon un critère ci-dessous." AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0" />
     <MenuButton id="exportButton" layoutX="747.0" layoutY="43.0" mnemonicParsing="false" text="Exporter" textAlignment="CENTER">
       <items>
         <MenuItem mnemonicParsing="false" onAction="#exportTablePDF" text="PDF" />
