--- a/src/view/GestionEquipement.fxml
+++ b/src/view/GestionEquipement.fxml
@@ -6,21 +6,21 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.*?>
 
-<AnchorPane fx:id="bodyPanel" prefHeight="750.0" prefWidth="900.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controller.GestionEquipement">
+<AnchorPane fx:id="bodyPanel" prefHeight="750.0" prefWidth="900.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/2.2" fx:controller="controller.GestionEquipement">
   <children>
     <Button layoutX="362.0" layoutY="25.0" mnemonicParsing="false" onAction="#displayAddEquipment" prefHeight="31.0" prefWidth="197.0" text="Ajouter des équipements" />
-    <TableView fx:id="tableViewEquipement" layoutX="29.0" layoutY="172.0" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="492.0" prefWidth="842.0">
+    <TableView fx:id="tableViewEquipement" maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="492.0" prefWidth="842.0" AnchorPane.bottomAnchor="86.0" AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0">
       <columns>
-        <TableColumn fx:id="columnCalife" maxWidth="5000.0" minWidth="10.0" prefWidth="164.0" text="Nom Calife" />
-        <TableColumn fx:id="columnType" maxWidth="5000.0" minWidth="10.0" prefWidth="114.0" text="Type" />
-        <TableColumn fx:id="columnPole" maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Pole" />
-        <TableColumn fx:id="columnAgent" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="N° CP Agent" />
-            <TableColumn fx:id="columnOpen" prefWidth="92.0" text="Ouvrir" />
-            <TableColumn fx:id="columnEdit" prefWidth="122.0" text="Modifier" />
-        <TableColumn fx:id="columnDelete" maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="Supprimer" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="164.0" text="Nom Calife" fx:id="columnCalife" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="114.0" text="Type" fx:id="columnType" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="131.0" text="Pole" fx:id="columnPole" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="N° CP Agent" fx:id="columnAgent" />
+        <TableColumn prefWidth="92.0" text="Ouvrir" fx:id="columnOpen" />
+        <TableColumn prefWidth="122.0" text="Modifier" fx:id="columnEdit" />
+        <TableColumn maxWidth="5000.0" minWidth="10.0" prefWidth="109.0" text="Supprimer" fx:id="columnDelete" />
       </columns>
     </TableView>
-    <TextField fx:id="searchBar" layoutX="29.0" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Tapez votre recherche selon un critère ci-dessous." />
+    <TextField fx:id="searchBar" layoutY="134.0" prefHeight="31.0" prefWidth="842.0" promptText="Tapez votre recherche selon un critère ci-dessous." AnchorPane.leftAnchor="29.0" AnchorPane.rightAnchor="29.0" />
     <Separator layoutY="75.0" prefWidth="900.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" />
     <Label layoutX="277.0" layoutY="91.0" text="Modifier/Supprimer des équipements">
       <font>
@@ -35,6 +35,6 @@
     </MenuButton>
     <Button layoutX="613.0" layoutY="25.0" mnemonicParsing="false" onAction="#importExcel" text="Import Excel" textAlignment="CENTER" />
     <CheckBox fx:id="checkBoxExportTable" layoutX="747.0" layoutY="17.0" mnemonicParsing="false" text="Exporter le tableau" />
-      <Button fx:id="fieldRefresh" layoutX="29.0" layoutY="89.0" mnemonicParsing="false" onAction="#refreshTable" text="Actualiser" />
+    <Button fx:id="fieldRefresh" layoutX="29.0" layoutY="89.0" mnemonicParsing="false" onAction="#refreshTable" text="Actualiser" />
   </children>
 </AnchorPane>
