--- a/src/view/GraphNbEquipementPole.fxml
+++ b/src/view/GraphNbEquipementPole.fxml
@@ -23,5 +23,6 @@
         <Font name="System Bold" size="17.0" />
       </font>
     </Label>
+    <Button layoutX="400.0" layoutY="700.0" mnemonicParsing="false" onAction="#exportGraph" text="Exporter" />
   </children>
 </AnchorPane>
